2002-08-11  Sam Steingold  <sds@gnu.org>

	fixed the EXEEXT inconsistencies
	* _clisp.c (main): execname may be lisp.exe
	* clisp-link (LISPRUN): new variable, used throughout
	* makemake.in (clisp-link): replace EXEEXT
	use ${LEXE} more consistently

2002-08-10  Arseny Slobodjuck <ampy@ich.dvo.ru>

	* makemake.in [win32]: don't use apostrophes as shell screening
	characters on win32.

2002-08-10  Arseny Slobodjuck <ampy@ich.dvo.ru>

	* makemake.in: lisp executable depends on libcharset.

2002-08-09  Sam Steingold  <sds@gnu.org>

	fixed makemake creation: additional commands were not executed
	* configure.in (makemake): AC_OUTPUT with arguments is
	deprecated, use AC_CONFIG_COMMANDS instead
	* makemake.in (makemake): separate config.status invocation for
	variable substitution and the additional commands in configure.in

2002-08-09  Sam Steingold  <sds@gnu.org>

	* _clisp.c (main): accept `-d' (now that .clisp is gone, the
	developers are expected to use the driver)

2002-08-09  Sam Steingold  <sds@gnu.org>

	* makemake.in (TEXE, LEXE) [cygwin32]: exe/exe, because some
	win32 programs (e.g. Emacs) cannot start lisp.run (cygwin bash has
	no problems, of course)

2002-08-09  Sam Steingold  <sds@gnu.org>

	added Gabriel's benchmarks
	* makemake.in (bench): new target

2002-08-09  Sam Steingold  <sds@gnu.org>

	avoid compiler warning in (defun z () #'(lambda () (z)))
	* compiler.lisp (defining-p): new function
	(in-defun-p): use it
	(note-function-used): use it instead of IN-DEFUN-P

2002-08-07  Sam Steingold  <sds@gnu.org>

	* charstrg.d (MAKE-STRING) [HAVE_SMALL_SSTRING]: create a string
	of minimal element size for the given initial element

2002-08-07  Sam Steingold  <sds@gnu.org>

	* m4/ln.m4 (CL_PROG_HLN): this time, fixed the link test for real

2002-08-07  Sam Steingold  <sds@gnu.org>

	* pathname.d (COPY-FILE): instead of returning file count and
	byte count, return a list of (source dest byte-count) for each
	copy operation performed